--- a/hii.html
+++ b/hii.html
@@ -2,9 +2,18 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>The input element</h1>
 
-<p>My first paragraph.</p>
+<form action="/action_page.php">
+  <label for="fname">First name:</label>
+  <input type="text" id="fname" name="fname"><br><br>
+  <label for="lname">Last name:</label>
+  <input type="text" id="lname" name="lname"><br><br>
+  <input type="submit" value="Submit">
+</form>
+
+<p>Click the "Submit" button and the form-data will be sent to a page on the 
+server called "action_page.php".</p>
 
 </body>
 </html>
